simplified and cleaned up demo. login doesn't need post anymore.
Signed-off-by: Pekka Klärck <peke@iki.fi>

--- a/demoapp/html/error.html
+++ b/demoapp/html/error.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Error Page</title>
-  <link href="demo.css" media="all" rel="Stylesheet" type="text/css" />
+  <link href="demo.css" media="all" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div id='container'>
+  <div id="container">
     <h1>Error Page</h1>
     <p>Login failed. Invalid user name and/or password.</p>
   </div>
